test/networkpolicy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 0.0.0-devel
  name: keycloak
  namespace: test
spec:
  ports:
  - appProtocol: http
    name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 0.0.0-devel
  name: keycloak-jgroups
  namespace: test
spec:
  ports:
  - name: jgroups
    port: 7800
    protocol: TCP
    targetPort: jgroups
  selector:
    app.kubernetes.io/name: keycloak
  type: ClusterIP
---
apiVersion: v1
data:
  cache-ispn.xml: |2-
      <!--
      Unsecure configuration that not encrypt key echange
      -->
      <infinispan
              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
              xsi:schemaLocation="urn:infinispan:config:11.0 http://www.infinispan.org/schemas/infinispan-config-11.0.xsd"
              xmlns="urn:infinispan:config:11.0">
          <jgroups>
              <!--
              source: https://infinispan.org/docs/13.0.x/titles/embedding/embedding.html
              -->
              <stack name="encrypt-kubernetes" extends="kubernetes">
                  <ASYM_ENCRYPT use_external_key_exchange="false"
                                change_key_on_leave="false"
                                change_key_on_coord_leave="false"
                                asym_keylength="2048"
                                sym_keylength="128"
                                sym_algorithm="AES"
                                asym_algorithm="RSA"
                                stack.combine="INSERT_BEFORE"
                                stack.position="pbcast.NAKACK2"/>
              </stack>
          </jgroups>

          <cache-container name="keycloak">
              <transport stack="encrypt-kubernetes" lock-timeout="60000"/>
              <local-cache name="realms">
                  <encoding>
                      <key media-type="application/x-java-object"/>
                      <value media-type="application/x-java-object"/>
                  </encoding>
                  <memory max-count="10000"/>
              </local-cache>
              <local-cache name="users">
                  <encoding>
                      <key media-type="application/x-java-object"/>
                      <value media-type="application/x-java-object"/>
                  </encoding>
                  <memory max-count="10000"/>
              </local-cache>
              <distributed-cache name="sessions" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <distributed-cache name="authenticationSessions" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <distributed-cache name="offlineSessions" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <distributed-cache name="clientSessions" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <distributed-cache name="offlineClientSessions" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <distributed-cache name="loginFailures" owners="2">
                  <expiration lifespan="-1"/>
              </distributed-cache>
              <local-cache name="authorization">
                  <encoding>
                      <key media-type="application/x-java-object"/>
                      <value media-type="application/x-java-object"/>
                  </encoding>
                  <memory max-count="10000"/>
              </local-cache>
              <replicated-cache name="work">
                  <expiration lifespan="-1"/>
              </replicated-cache>
              <local-cache name="keys">
                  <encoding>
                      <key media-type="application/x-java-object"/>
                      <value media-type="application/x-java-object"/>
                  </encoding>
                  <expiration max-idle="3600000"/>
                  <memory max-count="1000"/>
              </local-cache>
              <distributed-cache name="actionTokens" owners="2">
                  <encoding>
                      <key media-type="application/x-java-object"/>
                      <value media-type="application/x-java-object"/>
                  </encoding>
                  <expiration max-idle="-1" lifespan="-1" interval="300000"/>
                  <memory max-count="-1"/>
              </distributed-cache>
          </cache-container>
      </infinispan>
immutable: true
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 0.0.0-devel
  name: keycloak-9c00292b
  namespace: test
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 0.0.0-devel
  name: keycloak
  namespace: test
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: timoni
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: keycloak
    ports:
    - port: 7800
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 0.0.0-devel
  name: keycloak
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
      - command:
        - /opt/keycloak/bin/kc.sh
        - start
        env:
        - name: KC_HEALTH_ENABLED
          value: "true"
        - name: KC_HTTP_ENABLED
          value: "true"
        - name: KEYCLOAK_ADMIN
          value: admin
        - name: KEYCLOAK_ADMIN_PASSWORD
          value: admin
        - name: KC_CACHE
          value: ispn
        - name: KC_CACHE_CONFIG_FILE
          value: cache-ispn.xml
        - name: KC_CACHE_STACK
          value: kubernetes
        - name: JAVA_OPTS_APPEND
          value: -Djgroups.dns.query=keycloak-jgroups
        image: quay.io/keycloak/keycloak:23.0@sha256:cff31dc6fbb0ab0b66176b990e6b9e262fa74a501abb9a4bfa4a529cbc8a526a
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 7800
          name: jgroups
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 15
        volumeMounts:
        - mountPath: /opt/keycloak/conf
          name: cache
      serviceAccountName: default
      volumes:
      - configMap:
          items:
          - key: cache-ispn.xml
            path: cache-ispn.xml
          name: keycloak-9c00292b
        name: cache
---
